--- a/angular.json
+++ b/angular.json
@@ -73,20 +73,11 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+             "cache": true,
+             "reporters": ["jest-junit", "default"],
+             "coverage": true 
           }
         },
         "lint": {
@@ -100,18 +91,6 @@
             "exclude": [
               "**/node_modules/**"
             ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "devsync:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "devsync:serve:production"
-            }
           }
         }
       }
