--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/jest": "~8.0.0",
     "@angular/animations": "~8.0.0",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
-    "@angular-builders/jest": "~8.0.0",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "classlist.js": "^1.1.20150312",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
