--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "test-dev": "ng test --watch",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "sanity": "npm run lint && npm run test"
   },
   "private": true,
   "dependencies": {
